force-app/main/default/objects/Contracted_Discount__c/Contracted_Discount__c.object-meta.xml
<CustomObject>
    <label>Contracted Discount</label>
    <nameField>
        <displayFormat>CD-{YY}-{000000}</displayFormat>
        <label>Contracted Discount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracted Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>