force-app/main/default/objects/Contracted_Discount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracted Discounts</relationshipLabel>
    <relationshipName>Contracted_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>