force-app/main/default/objects/Contracted_Discount__c/fields/Discount_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Discount_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Schedule</label>
    <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
    <relationshipLabel>Contracted Discounts</relationshipLabel>
    <relationshipName>Contracted_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>