force-app/main/default/objects/Contracted_Discount__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contracted Discounts</relationshipLabel>
    <relationshipName>Contracted_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>